--- a/src/Falco.Markup/Falco.Markup.fsproj
+++ b/src/Falco.Markup/Falco.Markup.fsproj
@@ -41,15 +41,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="../../assets/icon.png">
-      <Pack>true</Pack>
-      <PackagePath>$(PackageIconUrl)</PackagePath>
-    </None>
-
-    <None Include="../../docs/markup.md" Pack="true" PackagePath="\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Compile Include="XmlNode.fs" />
     <Compile Include="Text.fs" />
     <Compile Include="Elem.fs" />
@@ -57,4 +48,14 @@
     <Compile Include="Svg.fs" />
     <Compile Include="Templates.fs" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Include="../../assets/icon.png">
+      <Pack>true</Pack>
+      <PackagePath>$(PackageIconUrl)</PackagePath>
+    </None>
+
+    <None Include="../../README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
+
 </Project>
