repository url fix

--- a/src/Falco.Markup/Falco.Markup.fsproj
+++ b/src/Falco.Markup/Falco.Markup.fsproj
@@ -22,13 +22,13 @@
     <!-- NuGet config -->
     <PackageId>Falco.Markup</PackageId>
     <PackageTags>fsharp;markup;html;svg;xml;view engine;web;falco;falco-sharp;</PackageTags>
-    <PackageProjectUrl>https://github.com/pimbrouwers/Falco</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/pimbrouwers/Falco.Markup</PackageProjectUrl>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/pimbrouwers/Falco</RepositoryUrl>
+    <RepositoryUrl>https://github.com/pimbrouwers/Falco.Markup</RepositoryUrl>
 
     <!-- SourceLink settings -->
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
