--- a/src/Falco.Markup/Falco.Markup.fsproj
+++ b/src/Falco.Markup/Falco.Markup.fsproj
@@ -38,6 +38,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+    <PackageReference Update="FSharp.Core" Version="4.5.2" />
   </ItemGroup>
 
   <ItemGroup>
