--- a/src/Falco.Markup/Falco.Markup.fsproj
+++ b/src/Falco.Markup/Falco.Markup.fsproj
@@ -48,6 +48,7 @@
     <Compile Include="Attr.fs" />
     <Compile Include="Svg.fs" />
     <Compile Include="Templates.fs" />
+    <Compile Include="TestHelpers.fs" />
   </ItemGroup>
 
   <ItemGroup>
