--- a/src/Falco.Markup/Falco.Markup.fsproj
+++ b/src/Falco.Markup/Falco.Markup.fsproj
@@ -46,6 +46,7 @@
     <Compile Include="Text.fs" />
     <Compile Include="Elem.fs" />
     <Compile Include="Attr.fs" />
+    <Compile Include="Html.fs" />
     <Compile Include="Svg.fs" />
     <Compile Include="Templates.fs" />
     <Compile Include="TestHelpers.fs" />
