--- a/test/Falco.Markup.Tests/Falco.Markup.Tests.fsproj
+++ b/test/Falco.Markup.Tests/Falco.Markup.Tests.fsproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Tests.fs" />
+    <Compile Include="CoreTests.fs" />
+    <Compile Include="TestHelperTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
