--- a/benchmarks/FalcoBenchmarks.fsproj
+++ b/benchmarks/FalcoBenchmarks.fsproj
@@ -12,8 +12,8 @@
 
   <ItemGroup>
     <PackageReference Include="benchmarkdotnet" Version="0.13.1" />
-    <PackageReference Include="Giraffe.ViewEngine" Version="1.4.0" />
-    <PackageReference Include="Scriban" Version="4.0.1" />
+    <PackageReference Include="Giraffe.ViewEngine" Version="1.*" />
+    <PackageReference Include="Scriban" Version="4.*" />
   </ItemGroup>
 
   <ItemGroup>
